-Increased html readability -Moved search bar to nav bar (commented out old) -Changed .navitem:hover to .navitem.link:hover and added appropriate classes -Added .hidden css selector (currently commented out) -Made and styled modal (Not finalized, take a look and edit) -Commented start and end of templates for project cards & posts -FIXED: project box layout in small windows 	-by: giving div.project-card display: block

--- a/style.css
+++ b/style.css
@@ -8,59 +8,63 @@ body {
     font-family: 'Lato', sans-serif;
     margin: 0;
     background-color: #dadada;
-  }
+}
 
 a {
     text-decoration: none;
     color: #03a9f4;
-  }
-  
-  a:hover {
+}
+
+.hidden {
+    /*display: none;*/
+}
+
+a:hover {
     color: #0c719e;
-  }
-  
-  .site-title {
+}
+
+.site-title {
     margin: 0;
     padding: 20px;
-  }
-  
-  .navbar {
+}
+
+.navbar {
     font-size: 22px;
     background-color: #fff;
-  }
-  
-  .navlist {
+}
+
+.navlist {
     margin: 0;
-  }
-  
-  .navitem {
+}
+
+.navitem {
     display: inline-block;
-  }
-  
-  .navitem:hover {
+}
+
+.navitem.link:hover {
     background-color: rgba(231, 132, 119, 0.18);
-  }
-  
-  .navitem a {
+}
+
+.navitem a {
     display: inline-block;
     color: #454545;
     padding: 10px 20px;
-  }
-  
-  .navitem.right {
-    float: right;
-  }
+}
 
-  .title-container {
+.navitem.right {
+    float: right;
+}
+
+.title-container {
     margin: 10px;
     padding: 10px;
     border: 1px solid #ccc;
     background-color: #fff;
     text-align: center;
     font-size: 20px;
-  }
+}
 
-  .project-card {
+div.project-card {
     flex: 1 32%;
     margin: 20px;
     margin-left: 10px;
@@ -69,27 +73,33 @@ a {
     border: 1px solid #ccc;
     background-color: #fff;
     font-size: 28px;
-    height: 450px;
-    
-  }
+    /*height: 450px;*/
+    display: block;
 
-  .post-header {
+}
+
+span.post {
+    display: inline-block;
+
+}
+
+.post-header {
     border: 1px solid gray;
     margin: 5px;
     flex: 1 32%;
     padding: 20px;
     float: left;
-  }
-  .project-header {
+}
+.project-header {
     margin: 3px;
     margin-bottom: 30px;
-     
-  }
 
-  .code-img {
+}
+
+.code-img {
     max-height: 200px;
     max-width: 200px;
-  }
+}
 /*
   .post-card {
     flex: 1 32%;
@@ -100,30 +110,26 @@ a {
     margin: 5px;
   }
   */
-  
-  .post-header
-  {
+
+.post-header {
       height: 250px;
       width: 250px;
-  }
-  .post-header h3
-  {
+}
+.post-header h3 {
     margin-top: 0px;
     margin-bottom: 10px;
-  }
+}
 
-  #expand-post {
+#expand-post {
     float: right;
     margin: 0px;
 }
   /* need to display when user click the plush button*/
-  #close-post
-  {
+#close-post {
       float: right;
       display: none;
-  }
-  #add-new-post
-  {
+}
+#add-new-post {
     position: fixed;
     right: 50px;
     bottom: 50px;
@@ -133,9 +139,9 @@ a {
     height: 70px;
     color: white;
     font-size: 50px;
-  }
+}
 
-  .action-button {
+.action-button {
     font-size: 20px;
     color: white;
     padding: 10px;
@@ -143,14 +149,73 @@ a {
     border-radius: 5px;
     font-weight: lighter;
     cursor: pointer;
-  }
-  .search-bar
-  {
+}
+.search-bar {
     text-align: center;
-  }
-  #search-text-input
-  {
-      width: 350px;
-      height: 30px;
-      border: 1px solid white;
-  }
+}
+#search-text-input {
+    width: 350px;
+    height: 30px;
+    border: 1px solid black;
+}
+
+/*Modal css*/
+#modal-backdrop {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1000;
+    background-color: rgba(0, 0, 0, 0.85);
+}
+
+#new-post-modal {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1010;
+    overflow: scroll;
+}
+
+.modal-dialog {
+    /*width: auto;*/
+    max-width: 600px;
+    min-width: 350px;
+    min-height: 100px;
+    margin: 40px auto;
+    background-color: lightgray;
+    border-radius: 10px;
+}
+
+.modal-content {
+    position: relative;
+    max-width: 600px;
+    min-width: 350px;
+    min-height: 300px;
+}
+.modal-header h3 {
+    text-align: center;
+    font-family: 'Lato', sans-serif;
+    font-size: 25px;
+}
+#modal-close {
+    border: 2px solid black;
+    background-color: red;
+    border-radius: 50%;
+    position: absolute;
+    top: 4px;
+    right: 4px;
+}
+.create-input-container {
+    margin: 5px;
+    position: relative;
+    left: 80px;
+}
+.modal-footer {
+  position: absolute;
+  bottom: 4px;
+  right: 4px;
+}
